# media-manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.orange-pi.yml  docker-compose.yml
deploy/: .env.orange-pi.example  rsync-excludes.txt  sync-to-orange-pi.sh
ffmpeg/: jellyfin-ffmpeg-rk3588.env
frontend/: .env.example  README.md  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/: ConfirmDialog.svelte  OperationResultBanner.svelte  StageSidebar.svelte  WorkflowProgress.svelte
frontend/src/lib/components/onboarding/: IndexingModeSelector.svelte  LibraryDetectionPanel.svelte  types.ts  (+5 more)
frontend/src/lib/types/: api.ts
frontend/src/lib/utils/: api.ts
frontend/src/lib/workflow/: onboarding.ts  progress.ts  settings.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/consolidation/: +page.svelte
frontend/src/routes/formatting/: +page.svelte
frontend/src/routes/metadata/: +page.svelte
frontend/src/routes/onboarding/: +page.svelte  +page.ts
frontend/src/routes/operations/: +page.svelte
frontend/src/routes/queue/: +page.svelte
frontend/src/routes/settings/: +page.svelte
src/: audit_store.rs  auth.rs  config.rs  db_migrations.rs  golden_state_store.rs  jobs_store.rs  main.rs  operations.rs  path_policy.rs  preflight.rs  scanner.rs  sidecar_store.rs  sidecar_workflow.rs  sidecar_workflow_tests.rs  toolchain.rs
src/api/: routes.rs
src/domain/: sidecar.rs
tools/: update-jellyfin-ffmpeg-manifest.sh
(+3 files in other folders)
